# cargo-lipo

./: .travis.yml  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  integration.bats.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: test.yml
src/: cargo.rs  exec.rs  json_macros.rs  lipo.rs  main.rs  meta.rs  msg_error.rs  xcode.rs
testdata/: Readme.md
testdata/simple/: Cargo.toml
testdata/simple/src/: lib.rs
testdata/workspace/: Cargo.toml
testdata/workspace/buildutil/: Cargo.toml
testdata/workspace/buildutil/src/: build.rs  lib.rs
testdata/workspace/normal/: Cargo.toml
testdata/workspace/normal/src/: lib.rs
testdata/workspace/static1/: Cargo.toml
testdata/workspace/static1/src/: lib.rs
testdata/workspace/static2build/: Cargo.toml  build.rs
testdata/workspace/static2build/src/: lib.rs
testdata/workspace/static3bin/: Cargo.toml
testdata/workspace/static3bin/src/: lib.rs  main.rs
testdata/xcode/: .gitignore
testdata/xcode/cargo-lipo-test/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
testdata/xcode/cargo-lipo-test.xcodeproj/: project.pbxproj
testdata/xcode/cargo-lipo-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
testdata/xcode/cargo-lipo-test.xcodeproj/xcshareddata/xcschemes/: cargo-lipo-test.xcscheme
