[package]
name = "cargo-lipo"
version = "0.1.0"
authors = ["Tim Neumann <mail@timnn.me>"]
description = "cargo lipo subcommand to automatically create universal libraries for iOS"

homepage = "https://github.com/TimNN/cargo-lipo"
repository = "https://github.com/TimNN/cargo-lipo"

readme = "README.md"

keywords = ["cargo", "iOS"]

license = "MIT"

[dependencies]
clap = "1.4"
serde_json = "0.6"
