[package]
name = "cargo-lipo"
version = "1.0.0"
authors = ["Tim Neumann <mail@timnn.me>"]
description = "cargo lipo subcommand to automatically create universal libraries for iOS"

homepage = "https://github.com/TimNN/cargo-lipo"
repository = "https://github.com/TimNN/cargo-lipo"

readme = "README.md"

keywords = ["cargo", "iOS"]

license = "MIT/Apache-2.0"

[dependencies]
clap = "2.2.3"
serde_json = "0.7.0"
